<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.integratedmodelling</groupId>
	<artifactId>klab</artifactId>
	<version>0.10.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<licenses>
		<license>
			<name>GNU Affero General Public License (AGPL) version 3.0</name>
			<url>http://www.gnu.org/licenses/agpl-3.0.en.html</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Ferdinando Villa</name>
			<email>ferdinando.villa@bc3research.org</email>
			<organization>Basque Centre for Climate Change (BC3); IKERBASQUE, Basque foundation for science</organization>
			<organizationUrl>http://www.bc3research.org</organizationUrl>
		</developer>
		<developer>
			<name>Enrico Girotto</name>
			<email>enrico.girotto@gmail.com</email>
		</developer>
		<developer>
			<name>J.Luke Scott</name>
			<email>luke@cron.works</email>
			<organization>CronWorks Software, LLC</organization>
			<organizationUrl>http://cronworks.net</organizationUrl>
		</developer>
	</developers>

	<scm>
		<!-- TODO switch to public rep on github -->
		<connection>scm:git:http://bitbucket.org/fvilla/klab</connection>
		<developerConnection>scm:git:https://bitbucket.org/fvilla/klab</developerConnection>
		<url>https://bitbucket.org/fvilla/klab.git</url>
	</scm>

	<organization>
		<name>integratedmodelling.org</name>
		<url>http://www.integratedmodelling.org</url>
	</organization>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
		</repository>
	</distributionManagement>

	<modules>
		<module>api</module>
		<module>kdl</module>
		<module>kim</module>
		<module>klab.core</module>
		<module>klab.engine</module>
		<module>adapters</module>
		<module>klab.modeler</module>
		<module>client</module>
		<module>klab.tools</module>
		<module>ide</module>
		<module>klab.hub</module>
		<module>klab.node</module>
		<module>products</module>
	</modules>

	<properties>

		<klab.version>0.10.0-SNAPSHOT</klab.version>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>1.8</java.version>
		<!-- Careful here: geotools must be right for jgrasstools to work; JTS 
			should be the same one that geotools needs. -->
		<geotools.version>19-SNAPSHOT</geotools.version>
		<jgrasstools-version>0.8.1</jgrasstools-version>
		<jts.version>1.13</jts.version>
		<h2gis.version>1.2.4</h2gis.version>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>

		<nd4j.version>1.0.0-alpha</nd4j.version>
		<tycho-version>1.0.0</tycho-version>
		<xtextVersion>2.12.0</xtextVersion>
		<kotlin.version>1.2.31</kotlin.version>

		<!-- the five below go together. Never change one without checking the 
			others. Spring security latest is currently requiring 5.0.4, implying boot 
			2.0.0 -->
		<spring-boot-version>2.0.0.RELEASE</spring-boot-version>
		<spring-version>5.0.4.RELEASE</spring-version>
		<junit-version>4.12</junit-version>
		<jackson-version>2.9.5</jackson-version>
		<!-- end versions that need to be in lock-step to avoid multiple Spring 
			issues -->

		<joda-time-version>2.3</joda-time-version>
		<javax.mail-api.version>1.5.2</javax.mail-api.version>
		<jung.version>2.1.1</jung.version>
	</properties>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.7.0</version>
					<configuration>
						<source>${maven.compiler.source}</source>
						<target>${maven.compiler.target}</target>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>com.github.ekryd.sortpom</groupId>
				<artifactId>sortpom-maven-plugin</artifactId>
				<version>2.8.0</version>
				<executions>
					<execution>
						<phase>clean</phase>
						<goals>
							<goal>sort</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<keepBlankLines>1</keepBlankLines>
					<sortProperties>true</sortProperties>
					<nrOfIndentSpace>4</nrOfIndentSpace>
					<sortDependencies>scope,groupId,artifactId</sortDependencies>
					<createBackupFile>false</createBackupFile>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.marvinformatics.formatter</groupId>
				<artifactId>formatter-maven-plugin</artifactId>
				<version>1.8.1</version>
				<executions>
					<execution>
						<phase>clean</phase>
						<goals>
							<goal>format</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<configFile>etc/JavaFormatterSettings.xml</configFile>
					<configJsFile>etc/JavascriptFormatterSettings.xml</configJsFile>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>bundle-dependencies</id>
			<build>
				<directory>${basedir}/bundles</directory>
				<plugins>
					<plugin>
						<groupId>org.apache.felix</groupId>
						<artifactId>maven-bundle-plugin</artifactId>
						<version>2.0.1</version>
						<extensions>true</extensions>
						<executions>
							<execution>
								<id>wrap-dependencies</id>
								<goals>
									<goal>bundleall</goal>
								</goals>
								<configuration>
									<wrapImportPackage>*</wrapImportPackage>
									<instructions>
										<Export-Package>org.integratedmodelling.*</Export-Package>
										<!-- <Bundle-Activator>activator.Activator</Bundle-Activator> -->
										<Embed-Dependency>dependencies</Embed-Dependency>
									</instructions>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>3.0.0</version>
						<configuration>
							<additionalparam>-Xdoclint:none</additionalparam>
							<!-- <excludePackageNames>com.elet.dragonconsole.*:org.integratedmodelling.common.utils.jtopas.*</excludePackageNames> -->
						</configuration>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.0.1</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-deploy-plugin</artifactId>
						<version>2.8.2</version>
						<configuration>
							<skip>true</skip>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<version>1.6.8</version>
						<extensions>true</extensions>
						<configuration>
							<serverId>ossrh</serverId>
							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
							<autoReleaseAfterClose>true</autoReleaseAfterClose>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.6</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<repositories>
		<repository>
			<id>osgeo</id>
			<name>Open Source Geospatial Foundation Repository</name>
			<url>http://download.osgeo.org/webdav/geotools/</url>
		</repository>
		<repository>
			<id>im</id>
			<name>Integrated Modelling Partnership Repository</name>
			<url>http://www.integratedmodelling.org/nexus/content/repositories/releases/</url>
		</repository>
		<repository>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<id>boundless</id>
			<name>Boundless Maven Repository</name>
			<url>http://repo.boundlessgeo.com/main</url>
		</repository>
	</repositories>

</project>